fix(jwt): jwt check fixed
